# open-source-builder-kit

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  docs-links.yml
data/demo-inputs/: cli-batch.json  community-signals.json  maintainer-survey.csv  projects.json
docs/: cli-recipes.md  command-reference.md  community-health.md  getting-started.md  governance-lightweight.md  maintainer-playbook.md  release-guide.md
examples/: README.md  sample-roadmap.md
examples/project-profiles/: civic-data-commons.manifest.json  learning-lab-toolkit.manifest.json
examples/sample-outputs/: civic-data-commons.health-report.md  learning-lab-toolkit.health-report.md
schema/: manifest.schema.json
scripts/: check-doc-links.mjs  ci-checks.sh
src/open_source_builder_kit/: __init__.py  batch.py  checklists.py  cli.py  compare.py  doctor.py  health.py  init_manifest.py  issues.py  tasks.py  (+9 more)
templates/: CODE_OF_CONDUCT-template.md  CONTRIBUTING-template.md  DECISION_LOG-template.md  README-template.md  SECURITY-template.md
tests/: test_batch.py  test_checklists.py  test_cli.py  test_compare.py  test_docs.py  test_doctor.py  test_health.py  test_init_manifest.py  test_issues.py  test_labels.py  test_project_profiles.py  test_release_notes.py  test_reports.py  test_roadmap.py  test_schema.py  test_support.py  test_survey.py  test_tasks.py  test_validation.py
